infrastructure/platform/data/overlays/common/network-policy-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cnpg-platform-traffic
  labels:
    app.kubernetes.io/name: allow-cnpg-platform-traffic
    app.kubernetes.io/part-of: payu
    app.kubernetes.io/component: network
    payu.io/environment-selector: "true"
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: payu-database
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: payu-environment
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-operators
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-monitoring
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: payu-environment
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - ipBlock:
            cidr: 172.30.0.1/32
      ports:
        - protocol: TCP
          port: 443
    - to:
        - ipBlock:
            cidr: 10.0.0.0/8
      ports:
        - protocol: TCP
          port: 6443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-datagrid-platform-traffic
  labels:
    app.kubernetes.io/name: allow-datagrid-platform-traffic
    app.kubernetes.io/part-of: payu
    app.kubernetes.io/component: network
    payu.io/environment-selector: "true"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: payu-cache
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: payu-environment
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-operators
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-monitoring
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: payu-environment
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - ipBlock:
            cidr: 172.30.0.1/32
      ports:
        - protocol: TCP
          port: 443
    - to:
        - ipBlock:
            cidr: 10.0.0.0/8
      ports:
        - protocol: TCP
          port: 6443
